# servant

./: .gitignore  Cargo.toml  README.md  justfile
.pi/: settings.json
.pi/extension/: index.ts  package.json
skills/servant/: SKILL.md
src/: cli.rs  client.rs  config.rs  control.rs  daemon.rs  db.rs  guards.rs  host.rs  install.rs  lib.rs  lifecycle.rs  listing.rs  main.rs  output.rs  paths.rs  reaper.rs  serve.rs  ttl.rs  url_alloc.rs
tests/: cli_service.rs  control_plane.rs  ttl.rs
